add header component and update app layout, add products component

--- a/apps/pet-market-web/src/app/app.html
+++ b/apps/pet-market-web/src/app/app.html
@@ -1,2 +1,5 @@
-<app-nx-welcome></app-nx-welcome>
-<router-outlet></router-outlet>
+<!-- <app-nx-welcome></app-nx-welcome> -->
+<app-header></app-header>
+<main class="container mx-auto px-4 py-6">
+  <router-outlet></router-outlet>
+</main>
