feat: integrate Apollo Client and enable CORS in backend, update routing and product components in frontend

--- a/apps/pet-market-web/src/app/products/products.html
+++ b/apps/pet-market-web/src/app/products/products.html
@@ -1,1 +1,9 @@
-<p>products works!</p>
+@if(productStore.isLoading()) {
+  <p>Loading...</p>
+} @else {
+  <ul>
+    @for(product of productStore.featuredProducts(); track product.id) {
+      <li>{{product.name}}</li>
+    }
+  </ul>
+}
